# haxbevy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  deploy-pages.yml  release.yaml
assets/stadiums/base/: big_easy.json5  big_hockey.json5  big_rounded.json5  easy.json5  hockey.json5  huge.json5  rounded.json5  small.json5
src/: debug.rs  main.rs  menu.rs  physics.rs  renderer.rs
src/parser/: background.rs  ball_physics.rs  disc.rs  goal.rs  mod.rs  plane.rs  player_physics.rs  segment.rs  stadium.rs  utils.rs  vertex.rs
wasm/: index.html
