[package]
name = "haxbevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy-inspector-egui = "0.18.3"
bevy_egui = "0.21.0"
bevy_prototype_lyon = "0.9.0"
bitflags = "2.3.1"
console_error_panic_hook = "0.1.7"
jsonc-parser = { version = "0.21.1", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
wasm-bindgen = "0.2.86"
web-sys = "0.3.64"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
